--- a/frontend/register3.html
+++ b/frontend/register3.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
     <script src="scripts.js"></script>
-    <title>Sign Up</title>
+    <title>Sign Up3</title>
 </head>
 
 <body>
@@ -28,35 +28,35 @@
 
 
 
-                <form action="/frontend/index.html" method="GET">
-
-                    <div class="form-group d-none">
+                <form action="./index.html" method="GET">
+                    <br>
+                    <div class="form-group ">
 
                         <label class="mt-2">Gender</label></br>
-                        <input class="form-check-input" type="radio" name="male" id="maleRadio">
+                        <input class="form-check-input" type="radio" name="gender" id="maleRadio" value="male">
                         <label class="form-check-label" for="male">
                         Male
                     </label>
-                        <input class="form-check-input" type="radio" name="female" id="femaleRadio">
+                        <input class="form-check-input" type="radio" name="gender" id="femaleRadio" value="female">
                         <label class="form-check-label" for="female">
                         Female
                     </label> </br>
 
-                        <label class="mt-3" for="exampleInputEmail1">Gender preference</label></br>
-                        <input type="checkbox" name="femalePreference" class="form-check-input mt-2" id="maleCheckBox" />
+                        <label class="mt-3" for="exampleInputEmail1">Interested in</label></br>
+                        <input type="checkbox" name="genderPreference" class="form-check-input mt-2" id="maleCheckBox" value="male" />
                         <label class="form-check-label mt-1" for="exampleCheck1">Male</label>
-                        <input type="checkbox" name="malePreference" class="form-check-input mt-2" id="femaleCheckBox" />
+                        <input type="checkbox" name="genderPreference" class="form-check-input mt-2" id="femaleCheckBox" value="female" />
                         <label class="form-check-label" for="exampleCheck1">Female</label>
                         <!-- <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> -->
 
-                        <div class="form-group mt-3">
+                        <!-- <div class="form-group mt-3">
                             <label for="exampleInputPassword1">Enter Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
-                        </div>
+                        </div> -->
                         <!-- <a id="connectToSpotify" href="#">Sign up with Spotify</a>     -->
                         <button type="submit">Sign Up</button>
                     </div>
-                    <a id="connectToSpotify" href="#">Sign up with Spotify</a>
+                    <!-- <a id="connectToSpotify" href="#">Sign up with Spotify</a> -->
                 </form>
             </div>
         </div>
