--- a/frontend/spotifyLogin.html
+++ b/frontend/spotifyLogin.html
@@ -7,7 +7,8 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
-    <script src="scripts.js"></script>
+    <script defer src="scripts.js"></script>
+    <script defer src="./scripts/spotifyLogin.js"></script>
     <title>Sign Up2</title>
 </head>
 
@@ -28,13 +29,8 @@
 
 
 
-                <form action="./register3.html" method="GET">
-                    <!-- </br> -->
-
-                    <!-- <a id="connectToSpotify" href="#">Sign up with Spotify</a> -->
+                <form id="spotify" action="./register3.html">
                     <button type="submit" class="btn btn-primary">Sign up with Spotify</button>
-
-
                 </form>
             </div>
         </div>
