--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
     <!-- Include jQuery and other required
   files for Bootstrap -->
-    <script src="scripts.js"></script>
+    <!-- <script src="scripts.js"></script> -->
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -23,6 +23,7 @@
 
 <body>
     <div id="mainList">
+        <button id="click">click</button>
         <!-- <div class="container"> -->
         <h1 class="text text-success text-center ">
             SpoTinder
@@ -48,6 +49,7 @@
 
     </div>
     <script src="./scripts.js"></script>
+    <script src="./scripts/indexScript.js"></script>
 
 
 </body>
