--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,7 +7,6 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
-    <script defer src="scripts.js"></script>
     <script defer src="./scripts/register.js"></script>
     <title>Sign Up1</title>
 </head>
@@ -31,18 +30,18 @@
                     </br>
                     <div class="form-group">
                         <label for="userName">User name:</label>
-                        <input type="text" class="form-control" id="userNameInput" name="name" placeholder="User name">
+                        <input type="text" class="form-control" id="username" name="name" placeholder="User name">
                         </br>
                         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email address</label>
-                        <input type="email" class="form-control" id="emailInput" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                         <label for="passwordInput">Password</label>
-                        <input type="password" class="form-control" name="password" id="passwordInput" placeholder="Password">
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
                     </div>
                     <!-- <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
