finish personal details page

--- a/frontend/personalDetails.html
+++ b/frontend/personalDetails.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/pesonalDetails.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
@@ -16,7 +16,14 @@
 
 <body>
     <div id="personalDetails">
+        <!-- <div class="card"> -->
 
+        <section id="mainDetails"></section>
+        <section id="moreDetails">
+            <article id="artists"></article>
+            <article id="tracks"></article>
+        </section>
+        <!-- </div> -->
     </div>
 
     <script src="./scripts/pesonalDetailsScrips.js"></script>
