--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -48,7 +48,7 @@
         <!-- <p id="list"></p> -->
 
     </div>
-    <script src="./scripts.js"></script>
+    <!-- <script src="./scripts.js"></script> -->
     <script src="./scripts/indexScript.js"></script>
 
 
