--- a/frontend/register.html
+++ b/frontend/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
                     <h4>Sign Up</h4>
                 </div>
 
-                <form id="registerForm" action="http://localhost:8888/users", method="POST">
+                <form id="registerForm" action="http://localhost:8888/users" , method="POST">
                     </br>
                     <div class="form-group">
                         <label for="userName">User name:</label>
