--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,32 +22,26 @@
 </head>
 
 <body>
-    <div id="mainList">
-        <!-- <div class="container"> -->
-        <h1 class="text text-success text-center ">
-            SpoTinder
-        </h1>
-        <h6 class="text text-success text-center">
-            Dating app by music taste
-        </h6>
-        <!-- </div> -->
-
-        </br>
-
-
-
-        <!-- <p id="p">hiiiii</p> -->
-        <div id="list">
-            <ul id="listUl">
-                <!-- <li>
-                <img src="./images/shlomi.png" />Yovel <button>asdasd</button>
-            </li> -->
-            </ul>
+    <div class="container">
+       
+        <div id="mainList">
+                <h1 class="text text-success text-center ">
+                    SpoTinder
+                </h1>
+                <h6 class="text text-success text-center">
+                    Dating app by music taste
+                </h6>                
+            </br>
+            <h4>Your Matches:</h4>
+            <br>
+            <div id="list">
+                <ul id="listUl">
+                </ul>
+            </div>
         </div>
-        <!-- <p id="list"></p> -->
 
     </div>
-    <script src="./scripts.js"></script>
+    <script defer src="./scripts.js"></script>
 
 
 </body>
