--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
         </div>
 
     </div>
-    <script defer src="./scripts.js"></script>
+    <script defer src="./scripts/indexScript.js"></script>
 
 
 </body>
