using functions to build the list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,14 +35,15 @@
             <h4>Your Matches:</h4>
             <br>
             <div id="list">
-                <ul id="listUl">
-                </ul>
+                <!-- <ul id="listUl">
+                </ul> -->
             </div>
         </div>
 
     </div>
 
-    <script src="./scripts/indexScript.js"></script>
+    <script src="./scripts/consts.js"></script>
+    <script defer src="./scripts/indexScript.js"></script>
 
 
 
