finish handling the gender updating

--- a/frontend/register3.html
+++ b/frontend/register3.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="register">
+    <div id="register3">
         <h1 class="text text-success text-center ">
             SpoTinder
         </h1>
@@ -54,8 +54,9 @@
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div> -->
                         <!-- <a id="connectToSpotify" href="#">Sign up with Spotify</a>     -->
-                        <button type="submit">Sign Up</button>
+
                     </div>
+                    <button type="submit">Sign Up</button>
                     <!-- <a id="connectToSpotify" href="#">Sign up with Spotify</a> -->
                 </form>
             </div>
