create the profile page

--- a/frontend/personalDetails.html
+++ b/frontend/personalDetails.html
@@ -15,17 +15,43 @@
 </head>
 
 <body>
-    <div id="personalDetails">
-        <!-- <div class="card"> -->
+    <!-- <div class="card"> -->
+    <div class="container">
+        <header>
+            <!-- <h1 class="text text-success text-center ">
+                SpoTinder
+            </h1>
+            <h6 class="text text-success text-center">
+                Dating app by music taste
+            </h6> -->
 
-        <section id="mainDetails"></section>
-        <section id="moreDetails">
-            <article id="artists"></article>
-            <article id="tracks"></article>
-        </section>
-        <!-- </div> -->
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <a class="navbar-brand navbar-custom" href="#">SpoTinder</a>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a id="homePageLink" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Matches</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="profileLink" href="#" +>Profile</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <div id="personalDetails">
+            <section id="mainDetails"></section>
+            <section id="moreDetails">
+                <article id="artists"></article>
+                <article id="tracks"></article>
+            </section>
+            <!-- </div> -->
+        </div>
     </div>
-
     <script src="./scripts/pesonalDetailsScrips.js"></script>
 </body>
 
