--- a/frontend/list.html
+++ b/frontend/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,31 +10,51 @@
     <link rel="stylesheet" href="./css/list.css">
     <title>List</title>
 </head>
+
 <body>
     <div class="container">
-        <h1 class="text text-success text-center ">
-            SpoTinder
-        </h1>
-        <h6 class="text text-success text-center">
-            Dating app by music taste
-        </h6>
+        <header>
+            <!-- <h1 class="text text-success text-center ">
+                SpoTinder
+            </h1>
+            <h6 class="text text-success text-center">
+                Dating app by music taste
+            </h6> -->
+
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <a class="navbar-brand navbar-custom" href="#">SpoTinder</a>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Matches</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="profileLink" href="#" +>Profile</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
         <br>
         <h3>Your Potential Matches:</h3>
         <br>
         <div class="row">
-          <div class="col-12">
-            <table class="table table-bordered" id="list">
-              <thead>
-                <tr>
-                  <th scope="col"></th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Match Score</th>
-                  <th scope="col">Favorite Artist</th>
-                  <th scope="col">Favorite Song</th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <!-- <tbody>
+            <div class="col-12">
+                <table class="table table-bordered" id="list">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Match Score</th>
+                            <th scope="col">Favorite Artist</th>
+                            <th scope="col">Favorite Song</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <!-- <tbody>
                 <tr>
                   <td class="text-center align-middle"><img src="./images/shlomi.png"  class="img-thumbnail"></td>
                   <td class="text-center align-middle" >Shlomi Azulai</td>
@@ -49,12 +70,13 @@
                   </td>
                 </tr>
               </tbody> -->
-            </table>
-          </div>
+                </table>
+            </div>
         </div>
-      </div>
-      <script src="./scripts/consts.js"></script>
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-      <script defer src="./scripts/list.js"></script>
+    </div>
+    <script src="./scripts/consts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script defer src="./scripts/list.js"></script>
 </body>
+
 </html>
