--- a/frontend/personalDetails.html
+++ b/frontend/personalDetails.html
@@ -15,28 +15,25 @@
 </head>
 
 <body>
-    <!-- <div class="card"> -->
     <div class="container">
         <header>
-            <!-- <h1 class="text text-success text-center ">
-                SpoTinder
-            </h1>
-            <h6 class="text text-success text-center">
-                Dating app by music taste
-            </h6> -->
-
-            <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand navbar-custom" href="#">SpoTinder</a>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a id="homePageLink" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" id="logo" href="#">
+                    <img src="./images/logo_transparent_small.png" width="30" height="30" class="d-inline-block align-top" alt=""> SpoTinder
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" id="nav-home" href="#">Home</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" id="nav-myMatches" href="#">My Matches</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Matches</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="profileLink" href="#" +>Profile</a>
+                            <a class="nav-link active" id="nav-profile" href="#">Profile</a>
                         </li>
                     </ul>
                 </div>
@@ -49,10 +46,11 @@
                 <article id="artists"></article>
                 <article id="tracks"></article>
             </section>
-            <!-- </div> -->
         </div>
     </div>
     <script src="./scripts/pesonalDetailsScrips.js"></script>
+    <script defer src='./scripts/header.js'></script>
+
 </body>
 
 </html>
