--- a/frontend/register.html
+++ b/frontend/register.html
@@ -26,13 +26,12 @@
                     <h4>Sign Up</h4>
                 </div>
 
-                <form id="registerForm" action="http://localhost:8888/users" , method="POST">
+                <form id="registerForm" action="#">
                     </br>
                     <div class="form-group">
                         <label for="userName">User name:</label>
                         <input type="text" class="form-control" id="username" name="name" placeholder="User name">
                         </br>
-                        <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email address</label>
@@ -61,13 +60,11 @@
                         <label class="form-check-label" for="exampleCheck1">Female</label>
                     </div>
                     <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
-                    <!-- <a href="#">Next</a> -->
                 </form>
             </div>
         </div>
     </div>
-
-
+    <script src="./scripts/consts.js"></script>
 </body>
 
 </html>
