--- a/frontend/spotifyLogin.html
+++ b/frontend/spotifyLogin.html
@@ -4,13 +4,10 @@
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-
     <script defer src="./scripts/spotifyLogin.js"></script>
     <title>Sign Up2</title>
 </head>
-
 <body>
     <div id="register2">
         <h1 class="text text-success text-center ">
@@ -19,23 +16,18 @@
         <h6 class="text text-success text-center">
             Dating app by music taste
         </h6>
-
         <div class="container">
             <div class="card">
                 <div class="d-flex justify-content-center">
                     <h4>Sign Up</h4>
                 </div>
-
-
-
                 <form id="spotify" action="./register3.html">
                     <button type="submit" class="btn btn-primary">Sign up with Spotify</button>
                 </form>
             </div>
         </div>
     </div>
-
-
+    <script src="./scripts/consts.js"></script>
 </body>
 
 </html>
