--- a/frontend/myMatches.html
+++ b/frontend/myMatches.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="./css/list.css">
-    <title>List</title>
+    <title>SpoTinder | My Matches</title>
 </head>
 <body>
     <div class="container">
@@ -51,6 +51,5 @@
       <script src="./scripts/consts.js"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script defer src='./scripts/header.js'></script>
-      
 </body>
 </html>
