--- a/frontend/personalDetails.html
+++ b/frontend/personalDetails.html
@@ -3,17 +3,12 @@
 
 <head>
     <link rel="stylesheet" href="./css/pesonalDetails.css">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-    <title>Personal Details</title>
+    <title>SpoTinder | Match</title>
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -39,7 +34,6 @@
                 </div>
             </nav>
         </header>
-
         <div id="personalDetails">
             <section id="mainDetails"></section>
             <section id="moreDetails">
@@ -50,7 +44,5 @@
     </div>
     <script src="./scripts/pesonalDetailsScrips.js"></script>
     <script defer src='./scripts/header.js'></script>
-
 </body>
-
 </html>
