--- a/frontend/list.html
+++ b/frontend/list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="./css/list.css">
-    <title>List</title>
+    <title>SpoTinder | Potential Matches</title>
 </head>
-
 <body>
     <div class="container">
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" id="logo" href="#">
                 <img src="./images/logo_transparent_small.png" width="30" height="30" class="d-inline-block align-top" alt=""> SpoTinder
@@ -36,12 +33,10 @@
             </div>
         </nav>
         <br>
-
         <br>
         <h3>Your Potential Matches:</h3>
         <br>
         <div class="row">
-
             <div class="col-12">
                 <table class="table table-bordered" id="list">
                     <thead>
@@ -62,7 +57,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script defer src='./scripts/header.js'></script>
     <script defer src="./scripts/list.js"></script>
-
 </body>
-
 </html>
