--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-    <title>Document</title>
+    <title>SpoTinder | Profile</title>
 </head>
 <body>
     <div class="container rounded bg-white mt-5 mb-5">
