--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -10,7 +9,6 @@
     <script defer src="./scripts/register.js"></script>
     <title>Sign Up1</title>
 </head>
-
 <body>
     <div id="register1">
         <h1 class="text text-success text-center ">
@@ -19,13 +17,11 @@
         <h6 class="text text-success text-center">
             Dating app by music taste
         </h6>
-
         <div class="container">
             <div class="card">
                 <div class="d-flex justify-content-center">
-                    <h4>Sign Up</h4>
+                    <h4>SpoTinder | Sign Up</h4>
                 </div>
-
                 <form id="registerForm" action="#">
                     </br>
                     <div class="form-group">
@@ -42,7 +38,6 @@
                         <label for="passwordInput">Password</label>
                         <input type="password" class="form-control" name="password" id="password" placeholder="Password">
                     </div>
-
                     <div class="form-group gender">
                         <label class="mt-2">Gender</label></br>
                         <input class="form-check-input" type="radio" name="gender" id="maleRadio" value="male">
@@ -66,5 +61,4 @@
     </div>
     <script src="./scripts/consts.js"></script>
 </body>
-
 </html>
