--- a/frontend/spotifyLogin.html
+++ b/frontend/spotifyLogin.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script defer src="./scripts/spotifyLogin.js"></script>
-    <title>Sign Up2</title>
+    <title>SpoTinder | Connect Spotify</title>
 </head>
 <body>
     <div id="register2">
@@ -29,5 +28,4 @@
     </div>
     <script src="./scripts/consts.js"></script>
 </body>
-
 </html>
