--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
     <script defer src="./scripts/register.js"></script>
-    <title>Sign Up1</title>
+    <title>SpoTinder | Sign Up</title>
 </head>
 <body>
     <div id="register1">
@@ -15,7 +15,7 @@
             SpoTinder
         </h1>
         <h6 class="text text-success text-center">
-            Dating app by music taste
+            Dating app for music lovers!
         </h6>
         <div class="container">
             <div class="card">
